--- a/DemoMvcApplication/Views/Home/Index.cshtml
+++ b/DemoMvcApplication/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap.min.js"></script>
 
-<div>
-    <h4>Demo MVC Application</h4>
-    @Html.ActionLink("Click here to Login","Login","User")
-</div>
+    <div class="row">
+        <div class="col-md-6">
+            <div >
+                <h4><b><i>Hospital Management Application</i></b></h4>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <a href="javascript:void(0)" class="text-right db">
+            <img src="~/Images/eliteadmin-logo-dark.png" /></br>
+            <img src="~/Images/eliteadmin-text-dark.png" /></br>
+        </a>
+    </div>
+    <div>
+        @Html.ActionLink("Click here to Login", "Login", "User")
+    </div>
+
+
+
+
